--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@
 title: Sittercity Tech
 email: dev@sittercity.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Learn all about all of the interesting stuff going on at Sittercity
+  Tech! Well, interesting if you are a total dork, I guess.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://localhost" # the base hostname & protocol for your site
 host: 0.0.0.0
