--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Learn all about all of the interesting stuff going on at Sittercity
   Tech! Well, interesting if you are a total dork, I guess.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://localhost" # the base hostname & protocol for your site
+url: "http://tech.sittercity.io" # the base hostname & protocol for your site
 host: 0.0.0.0
 twitter_username: sittercitytech
 github_username:  sittercity
@@ -18,7 +18,7 @@ pages_list:
 # Build settings
 markdown: kramdown
 
-permalink: "/:title" # only make routes
+permalink: /articles/:year/:month/:day/:title
 
 paginate: 5
 paginate_path: "/page/:num/"
